logs/pub_sub2/build.make.034.log.stderr
In file included from /opt/ros/kinetic/include/ros/ros.h:40:0,
                 from /home/ros-industrial/HW8/src/pub_sub2/src/pubvel_smart.cpp:3:
/home/ros-industrial/HW8/src/pub_sub2/src/pubvel_smart.cpp: In function ‘int main(int, char**)’:
/home/ros-industrial/HW8/src/pub_sub2/src/pubvel_smart.cpp:41:24: error: ‘msg2’ was not declared in this scope
       << " linear=" << msg2.x
                        ^
/opt/ros/kinetic/include/ros/console.h:356:64: note: in definition of macro ‘ROSCONSOLE_PRINT_STREAM_AT_LOCATION_WITH_FILTER’
     __rosconsole_print_stream_at_location_with_filter__ss__ << args; \
                                                                ^
/opt/ros/kinetic/include/ros/console.h:398:7: note: in expansion of macro ‘ROSCONSOLE_PRINT_STREAM_AT_LOCATION’
       ROSCONSOLE_PRINT_STREAM_AT_LOCATION(args); \
       ^
/opt/ros/kinetic/include/ros/console.h:568:43: note: in expansion of macro ‘ROS_LOG_STREAM_COND’
 #define ROS_LOG_STREAM(level, name, args) ROS_LOG_STREAM_COND(true, level, name, args)
                                           ^
/opt/ros/kinetic/include/rosconsole/macros_generated.h:111:31: note: in expansion of macro ‘ROS_LOG_STREAM’
 #define ROS_INFO_STREAM(args) ROS_LOG_STREAM(::ros::console::levels::Info, ROSCONSOLE_DEFAULT_NAME, args)
                               ^
/home/ros-industrial/HW8/src/pub_sub2/src/pubvel_smart.cpp:40:5: note: in expansion of macro ‘ROS_INFO_STREAM’
     ROS_INFO_STREAM("Sending random velocity command:"
     ^
make[2]: *** [CMakeFiles/pubvel_smart.dir/src/pubvel_smart.cpp.o] Error 1
make[1]: *** [CMakeFiles/pubvel_smart.dir/all] Error 2
make: *** [all] Error 2
